# pygeojson

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
.github/workflows/: test.yaml
assets/: feature.json  feature_with_extra_attributes.json  feature_with_id.json  feature_with_null_geom.json  feature_with_props.json  feature_without_geom.json  featurecollection.json  featurecollection_with_extra_attributes.json  geometrycollection.json  linestring.json  not_a_geojson.json  not_a_json.json
pygeojson/: __init__.py  parsers.py  serializers.py  types.py
tests/: test_immutability.py  test_pygeojson.py
