[tool.poetry]
name = "pygeojson"
version = "0.1.0"
description = "GeoJSON library for Python with types"
authors = ["Håkon Åmdal <hakon@aamdal.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
