[tool.poetry]
name = "pygeojson"
version = "0.1.0"
description = "GeoJSON library for Python with types"
authors = ["Håkon Åmdal <hakon@aamdal.com>"]
maintainers = ["Håkon Åmdal <hakon@aamdal.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/hawkaa/pygeojson"
repository = "https://github.com/hawkaa/pygeojson"
documentation = "https://github.com/hawkaa/pygeojson"
keywords = ["geojson", "typed", "dataclasses", "immutable"]
classifiers = [
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
black = "^19.10b0"
mypy = "^0.770"
python-semantic-release = "^7.1.1"

[tool.semantic_release]
version_variable = "pygeojson/__init__.py:__version__"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
